[gd_scene load_steps=7 format=3 uid="uid://d0xiw0yukyvws"]

[ext_resource type="Script" uid="uid://dnjv3fjoxajmd" path="res://Scripts/option_menu.gd" id="1_ctdjx"]
[ext_resource type="FontFile" uid="uid://buchijmd1hyyk" path="res://Assets/Fonts/Ithaca-LVB75.ttf" id="2_s6ou4"]

[sub_resource type="Animation" id="Animation_s6ou4"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_xt6yv"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_47jcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gg4yi"]
_data = {
&"RESET": SubResource("Animation_47jcy"),
&"fade_in": SubResource("Animation_s6ou4"),
&"fade_out": SubResource("Animation_xt6yv")
}

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 359.0
offset_top = -1.0
offset_right = -357.99963
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctdjx")

[node name="options_fade" type="ColorRect" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_right = 1160.0
offset_bottom = 655.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="options_fade"]
libraries = {
&"": SubResource("AnimationLibrary_gg4yi")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -388.0
offset_top = -19.0
offset_right = 837.0
offset_bottom = 674.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6ou4")
theme_override_font_sizes/font_size = 100
text = "Options"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6ou4")
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -24.0
max_value = 24.0

[node name="Mute" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6ou4")
theme_override_font_sizes/font_size = 30
text = "Mute"

[node name="MuteBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 3
item_count = 5
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1900x1600"
popup/item_1/id = 2
popup/item_2/text = "1080x720"
popup/item_2/id = 1
popup/item_3/text = "1152x648"
popup/item_3/id = 3
popup/item_4/text = "FULLSCREEN"
popup/item_4/id = 4

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s6ou4")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="options_timer" type="Timer" parent="."]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MuteBox" to="." method="_on_mute_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="options_timer" to="." method="_on_options_timer_timeout"]
